--- a/Jeopardy/Jeopardy/Jeopardy.csproj
+++ b/Jeopardy/Jeopardy/Jeopardy.csproj
@@ -99,7 +99,6 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Clue.cs" />
-    <Compile Include="Models\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\GameParser.cs" />
   </ItemGroup>
@@ -142,6 +141,16 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jeopardy.DataRepository\Jeopardy.DataRepository.csproj">
+      <Project>{5730d8dc-4659-46bb-a407-a25c420cd956}</Project>
+      <Name>Jeopardy.DataRepository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Jeopardy.Utilities\Jeopardy.Services.csproj">
+      <Project>{c42ebd5b-275a-4285-aa01-9f58ceaf0622}</Project>
+      <Name>Jeopardy.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
